--- a/components/toDo/allToDo.module.css
+++ b/components/toDo/allToDo.module.css
@@ -1,7 +1,14 @@
-.text {
-  margin: 10px;
-  border: 1px solid;
-  border-radius: 13px;
+.main {
+  height: 100%;
+  width: 100%;
   padding: 10px;
+}
+
+.text {
+  font-size: 19;
+  font-weight: 600;
+  color: black;
   text-align: center;
+  margin: 10px;
+  padding: 10px;
 }
