--- a/components/note/editNote.module.css
+++ b/components/note/editNote.module.css
@@ -21,3 +21,10 @@
   width: 100%;
   background-color: rgb(184, 3, 3);
 }
+
+.btn {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-left: 60%;
+}
