--- a/components/toDo/editToDo.module.css
+++ b/components/toDo/editToDo.module.css
@@ -6,6 +6,7 @@
 }
 
 .sec {
+  border: 0px;
   font-size: 14;
   font-weight: 400;
   color: black;
@@ -14,6 +15,7 @@
 }
 
 .in {
+  border: 0px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
