--- a/components/layout/css/customTab.module.css
+++ b/components/layout/css/customTab.module.css
@@ -3,8 +3,7 @@
   flex-direction: row;
   justify-content: space-around;
   width: 100%;
-  height: 44px;
-  background-color: #ffef97;
+  background-color: #c9c9c9;
 }
 
 .btn {
@@ -30,4 +29,10 @@
   color: black;
   width: 100%;
   text-align: center;
+}
+
+.divider {
+  width: 1.5px;
+  height: 44px;
+  background-color: black;
 }
